--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
-  }
+  },
+  "rules": {
+  "@typescript-eslint/no-unused-vars": ["warn"] 
+}
 }
